feat: fixed docs and swagger generation
