# src/webapi/models/interfaces/IEntity.ts
@@ -1,0 +1,5 @@
+export interface IEntitiy {
+  _id?: string;
+  createdAt?: Date;
+  updatedAt?: Date;
+}
